--- a/templates/index.html
+++ b/templates/index.html
@@ -7,23 +7,11 @@
 </head>
 <body>
     <header>
-        <img src="../images/digital_logo.png" alt="logo">
-        <h1>精立數位 JinZ Digital 問答系統</h1>
+        <img src="https://www.dalux.com.tw/uploads/145/images/index_set/tw/logo.svg?r=sLXmn" alt="logo">
+        <h1>睿明科技 Dalux Technology 問答系統</h1>
     </header>
     <div class="wrap">
-        <div class="left-navbar"> 
-            <!--  
-            <select id="folders" name="folders" onchange="sendFolder()">
-                <option value="new">new</option>
-                <option value="0319">0319</option>
-                <option value="0320">0320</option>
-                <option value="test1">test1</option>
-            </select>
-            <div class="similar-area">
-                <h2>相似問題</h2>
-                <ul class="similar"></ul>
-            </div>-->
-        </div>
+        <div class="left-navbar"></div>
         <div class="chat-area">
             <div class="chat-history">
             </div>
@@ -37,28 +25,6 @@
         
     </div>
     <script>
-        /*
-        function sendFolder(){
-            var selectedFolder = document.getElementById("folders").value;
-            
-            document.querySelector(".chat-history").innerHTML = "";
-            fetch('/selected_folder', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ folder: selectedFolder })
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log(data);
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert("Error:",error);
-            });
-        }
-        */
         function copyText(text) {
             navigator.clipboard.writeText(text);
         }
