--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <img src="https://www.dalux.com.tw/uploads/145/images/index_set/tw/logo.svg?r=sLXmn" alt="logo">
-        <h1>睿明科技 Dalux Technology 問答系統</h1>
+        <h1>睿明科技 Dalux Technology 智能客服</h1>
     </header>
     <div class="wrap">
         <div class="left-navbar"></div>
