Update microphone icon

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,8 @@
             </div>
             <form action="/get_response" method = "post" accept-charset="UTF-8" id="chat-form">
                 <input type="text" class="user-input" placeholder="Ask a question..." name="user_input">
-                <button type="button" id = "startBtn"><i class="fa-solid fa-microphone"></i></button>
-                <button type="button" id = "stopBtn"><i class="fas fa-microphone-slash"></i></button>
+                <button type="button" id = "startBtn"><img src="../img/mic.svg"></button>
+                <button type="button" id = "stopBtn"><img src="../img/mic_slash.svg"></button>
                 <button type="submit" class="send-button">Send</button>
             </form>
         </div>
