--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             </div>
             <form action="/get_response" method = "post" accept-charset="UTF-8" id="chat-form">
                 <input type="text" class="user-input" placeholder="Ask a question..." name="user_input">
-                <button type="button" id = "startBtn"><img src="../img/mic.svg"></button>
+                <button type="button" id = "startBtn"><img src="https://raw.githubusercontent.com/loading2022/Dalux-QASystem/9d7e8cedb46bb2deb470339feb0f1f73ff59016a/img/mic.svg"></button>
                 <button type="button" id = "stopBtn"><img src="../img/mic_slash.svg"></button>
                 <button type="submit" class="send-button">Send</button>
             </form>
